--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
- 
    <header class="header">
+      <div class="header__poster">
+         <i class="fal fa-film"></i>
+         <p class="header__poster-text">See no special offer restrictions</p>
+      </div>
       <div class="header__poster">
          <i class="fal fa-film"></i>
          <p class="header__poster-text">See no special offer restrictions</p>
